sample/retrieveUnpackaged/objects/Portal_Marketing_Page_Tracking__c.object
<CustomObject>
    <description>Indicates when a marketing page is displayed for a user and whether they clicked on either the cancel or “show me” link.</description>
    <fields>
        <fullName>Click_Through_Link__c</fullName>
        <description>Indicates the URL which the user clicked on.</description>
        <inlineHelpText>Indicates the URL which the user clicked on.</inlineHelpText>
        <label>Click Through Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Displayed_Timestamp__c</fullName>
        <description>Indicates the date and time when this marketing page was displayed to the user</description>
        <inlineHelpText>Indicates the date and time when this marketing page was displayed to the user</inlineHelpText>
        <label>Displayed Timestamp</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Don_t_Display_Again__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The user has indicated that they don’t want this marketing page displayed again.</description>
        <inlineHelpText>The user has indicated that they don’t want this marketing page displayed again.</inlineHelpText>
        <label>Don’t Display Again</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Action_Timestamp__c</fullName>
        <description>Indicates the date and time when this action (closed or opened) was performed by the user.</description>
        <inlineHelpText>Indicates the date and time when this action (closed or opened) was performed by the user.</inlineHelpText>
        <label>Last Action Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Action__c</fullName>
        <description>Indicates whether the type of action that occurred for this user and marketing page.</description>
        <inlineHelpText>Indicates whether the type of action that occurred for this user and marketing page.</inlineHelpText>
        <label>Last Action</label>
        <picklist>
            <picklistValues>
                <fullName>Displayed</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opened</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portal_Marketing_Page__c</fullName>
        <description>The Portal Marketing Page to which this tracking record applies.</description>
        <inlineHelpText>The Portal Marketing Page to which this tracking record applies.</inlineHelpText>
        <label>Portal Marketing Page</label>
        <referenceTo>Portal_Marketing_Page__c</referenceTo>
        <relationshipLabel>Portal Marketing Page Tracking</relationshipLabel>
        <relationshipName>Portal_Marketing_Page_Tracking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The user which the tracking relates to</description>
        <inlineHelpText>The user which the tracking relates to</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Portal_Marketing_Page_Tracking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Portal Marketing Page Tracking</label>
    <nameField>
        <displayFormat>TRK{00000000}</displayFormat>
        <label>Tracking Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portal Marketing Page Tracking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>